<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rahasak</string>
    <string name="ns_menu_open">open</string>
    <string name="ns_menu_close">close</string>
    <string name="sample_address">No 35, Pullair kovil road \n Matale</string>
    <string name="tap_here">Tap here to get \n location</string>
    <string name="des">Keep sharing any thing you want\n any one you want</string>
    <string name="des1">#GET #PUT #SHARE \n  #DATA</string>
    <string name="preference_file_key">com.score.senz.PREFERENCE_FILE_KEY</string>
    <string name="new_senz">SenZ received</string>
    <string name="launch_senzors">Touch for launch senZors</string>
    <string name="disconnected">Disconnected from senZors</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="recent_tab">Active</string>
    <string name="all_friends_tab">All Friends</string>
    <string name="splash_secrets">(Secrets)</string>
    <string name="splash_powered_by">Powered by </string>
    <string name="splash_senz_platform">Senz Platform.</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_invite">Invite</string>
    <string name="action_bar_permissions">Permissions</string>
    <string name="action_bar_profile">Profile</string>
    <string name="invite_user_id">User ID</string>
    <string name="invite_button_text">Let\'s start sharing secrets!</string>

    <string name="invite_text_part_1">Is there someone who would</string>
    <string name="invite_text_part_2">like to share a</string>
    <string name="invite_text_part_3">secret</string>
    <string name="invite_text_part_4">with you?</string>
    <string name="invite_text_part_5">Show them you’re</string>
    <string name="invite_text_part_6">interested by inviting them to\nshare secrets.</string>
    <string name="share_a_secret_text">Share a secret\n with </string>
    <string name="permission_text">Permission: </string>
    <string name="perm_allowed_Text">Allowed Permissions: </string>
    <string name="perm_location">Location </string>
    <string name="perm_camera">Camera </string>
    <string name="user_perm_card">user_perm_card</string>
    <string name="default_user_image">default_user_image</string>
    <string name="enter_secret_here_hint">Enter your secret here..</string>
    <string name="chat_seen">Seen</string>
    <string name="see_icon">see_icon</string>
    <string name="chat_not_seen">Not yet seen</string>


    <string name="register_welcome_text">Welcome</string>
    <string name="register_button_text">Register</string>
    <string name="register_user_id">Username</string>



    <string name="home_page_tab_one">Rahas</string>
    <string name="home_page_tab_two">Friends</string>


    <string name="no_registered_user">No Registered User. You must be a registered User to use this App.</string>

</resources>
